unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Type__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Type__c</fullName>
    <inlineHelpText>A picklist used to indicate a project&#39;s type.</inlineHelpText>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monitoring Implementation</fullName>
            </value>
            <value>
                <fullName>Monitoring Decommissioning</fullName>
            </value>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
            <value>
                <fullName>Drive O&amp;M</fullName>
            </value>
            <value>
                <fullName>Edge Services</fullName>
            </value>
            <value>
                <fullName>Internal Projects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>