unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Units__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Units__c</fullName>
    <description>Defining the calculation method for calculating an end date for a Project Task</description>
    <inlineHelpText>The units by which a project task duration is calculated.</inlineHelpText>
    <label>Project Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duration</fullName>
                <default>true</default>
                <label>Duration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>