unpackaged/main/default/objects/project_cloud__Project__c/fields/project_cloud__Worked_Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Worked_Hours__c</fullName>
    <description>Sum of the hours completed on the Project, it&#39;s Phases, Tasks and Tickets using the time entry Work objects. This is calculated by the trigger WorkConfiguration</description>
    <inlineHelpText>Shows a rollup summary of hours entered to records under the project. This field should not be manually editable.</inlineHelpText>
    <label>Entered Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>