unpackaged/main/default/objects/project_cloud__Project__c/fields/Project_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Project_Visibility__c</fullName>
    <label>Project Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visible to Customer</fullName>
            </value>
            <value>
                <fullName>Not Visible to Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>