unpackaged/main/default/objects/project_cloud__Project__c/fields/Related_Projects__c.field-meta.xml
<CustomField>
    <fullName>Related_Projects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Projects (Related Projects)</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>