unpackaged/main/default/objects/project_cloud__Project__c/fields/Schedule_Performance_Index__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Performance_Index__c</fullName>
    <formula>/* (ccpe_r__Budgeted_Labor_Cost__c * project_cloud__Completed_Percent__c) /
(ccpe_r__Budgeted_Labor_Cost__c * ( project_cloud__Worked_Hours__c / project_cloud__Estimated_Hours__c)) */

 (  Earned_Value__c  /  Planned_Value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Performance Index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>