unpackaged/main/default/objects/project_cloud__Project__c/fields/Schedule_Variance__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Variance__c</fullName>
    <formula>/*Earned_Value__c -  Planned_Value__c*/

( Earned_Value__c  -  Planned_Value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>