unpackaged/main/default/objects/project_cloud__Project__c/fields/Status_Comment__c.field-meta.xml
<CustomField>
    <fullName>Status_Comment__c</fullName>
    <label>Status Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>