unpackaged/main/default/objects/project_cloud__Project__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>project_cloud__Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Inbox</fullName>
            </value>
            <value>
                <fullName>Info collection</fullName>
            </value>
            <value>
                <fullName>Under construction / backlogged</fullName>
            </value>
            <value>
                <fullName>To Do</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Blocked - Internal</fullName>
            </value>
            <value>
                <fullName>Blocked - Customer</fullName>
            </value>
            <value>
                <fullName>Blocked - 3rd party</fullName>
            </value>
            <value>
                <fullName>Quality Checking</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Completed - work open</fullName>
            </value>
            <value>
                <fullName>Completed - historical data import</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Selected for Development</fullName>
            </value>
            <value>
                <fullName>Under Spec</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Won&#39;t do</fullName>
            </value>
            <value>
                <fullName>Backlog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>