unpackaged/main/default/objects/project_cloud__Project__c/fields/Template_Id_Reference__c.field-meta.xml
<CustomField>
    <fullName>Template_Id_Reference__c</fullName>
    <description>This field will store template Id while auto-creating project from &quot;Project Template&quot;</description>
    <label>Template Id Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>