unpackaged/main/default/objects/project_cloud__Project__c/fields/Ticket_Link__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Link__c</fullName>
    <label>Ticket Link</label>
    <type>Url</type>
</CustomField>