unpackaged/main/default/objects/project_cloud__Project__c/fields/To_Complete_Performance_Index__c.field-meta.xml
<CustomField>
    <fullName>To_Complete_Performance_Index__c</fullName>
    <formula>/*(ccpe_r__Total_Budgeted_Costs__c -  Estimate_at_Completion__c)*/

 (  project_cloud__Estimated_Hours__c  -  Earned_Value__c  )  /  (  project_cloud__Estimated_Hours__c  -  project_cloud__Worked_Hours__c  )</formula>
    <label>To Complete Performance Index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>