unpackaged/main/default/objects/project_cloud__Project__c/fields/Total_hours__c.field-meta.xml
<CustomField>
    <fullName>Total_hours__c</fullName>
    <label>Total hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>