unpackaged/main/default/objects/project_cloud__Project__c/fields/Trial__c.field-meta.xml
<CustomField>
    <fullName>Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trial</label>
    <type>Checkbox</type>
</CustomField>