unpackaged/main/default/objects/project_cloud__Project__c/fields/Variance_at_Completion__c.field-meta.xml
<CustomField>
    <fullName>Variance_at_Completion__c</fullName>
    <formula>(ccpe_r__Total_Budgeted_Costs__c -  Estimate_at_Completion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance at Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>