unpackaged/main/default/objects/project_cloud__Project__c/fields/Wrike_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Wrike_Legacy_ID__c</fullName>
    <label>Wrike Legacy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>