unpackaged/main/default/objects/project_cloud__Project__c/validationRules/project_cloud__Resources_Health2_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__Resources_Health2_Requires_Reason</fullName>
    <active>true</active>
    <description>If the Resources Health of a Project is changed, the reason field must be changed to explain why.</description>
    <errorConditionFormula>ISCHANGED(project_cloud__Resources_Health2__c)
 &amp;&amp; (
	NOT(ISCHANGED(project_cloud__Resources_Health2_Reason__c)) ||
	ISBLANK(project_cloud__Resources_Health2_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>project_cloud__Resources_Health2__c</errorDisplayField>
    <errorMessage>When the Resources Health is changed a reason must be given</errorMessage>
</ValidationRule>