unpackaged/main/default/objects/project_cloud__Project__c/listViews/project_cloud__All_Projects.listView-meta.xml
<ListView>
    <fullName>project_cloud__All_Projects</fullName>
    <columns>NAME</columns>
    <columns>ccpe_ocp__Account__c</columns>
    <columns>project_cloud__Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Internal_Status__c</columns>
    <columns>Product__c</columns>
    <columns>Program_Name__c</columns>
    <columns>Internal_Priority__c</columns>
    <columns>Plant_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>