unpackaged/main/default/objects/project_cloud__Project__c/listViews/Projects_Created_Today.listView-meta.xml
<ListView>
    <fullName>Projects_Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Project_Start_date__c</columns>
    <columns>project_cloud__End__c</columns>
    <columns>project_cloud__Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Projects Created Today</label>
</ListView>